--- a/tango_with_django_project/requirements.txt
+++ b/tango_with_django_project/requirements.txt
@@ -1,8 +1,10 @@
+beautifulsoup4==4.4.1
 Django==1.7
 django-registration-redux==1.4
 nltk==3.2
 pbr==1.8.1
 Pillow==3.1.1
+simplejson==3.8.2
 six==1.10.0
 stevedore==1.12.0
 textblob==0.11.1
@@ -10,4 +12,4 @@ textstat==0.2
 virtualenv==15.0.0
 virtualenv-clone==0.2.6
 virtualenvwrapper==4.7.1
-xmltodict==0.10.1
+xmlutils==1.1
